tests/compiler/letAsIdentifier2/index.ts
// From `github.com/microsoft/TypeScript/blob/v6.0.3/tests/cases/compiler/letAsIdentifier2.ts`, Apache-2.0 License

//@compiler-options: target=es6

function let() {}
//~^ ERROR: Identifier expected. 'let' is a reserved word in strict mode.